Remove trailing backslash in percent sign

--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -35,9 +35,9 @@
 \vs p012 3:5 \ublistelem{4.}\bibnobreakspace The Cosmic Gravity of the Isle of Paradise.
 \vs p012 3:6 \pc These four circuits are not related to the nether Paradise force centre; they are neither force, energy, nor power circuits. They are absolute \bibemph{presence} circuits and like God are independent of time and space.
 \vs p012 3:7 In this connection it is interesting to record certain observations made on Uversa during recent millenniums by the corps of gravity researchers. This expert group of workers has arrived at the following conclusions regarding the different gravity systems of the master universe:
-\vs p012 3:8 \ublistelem{1.}\bibnobreakspace \bibemph{Physical Gravity.} Having formulated an estimate of the summation of the entire physical\hyp{}gravity capacity of the grand universe, they have laboriously effected a comparison of this finding with the estimated total of absolute gravity presence now operative. These calculations indicate that the total gravity action on the grand universe is a very small part of the estimated gravity pull of Paradise, computed on the basis of the gravity response of basic physical units of universe matter. These investigators reach the amazing conclusion that the central universe and the surrounding seven superuniverses are at the present time making use of only about 5\%\ of the active functioning of the Paradise absolute\hyp{}gravity grasp. In other words: At the present moment about 95\%\ of the active cosmic\hyp{}gravity action of the Isle of Paradise, computed on this totality theory, is engaged in controlling material systems beyond the borders of the present organized universes. These calculations all refer to absolute gravity; linear gravity is an interactive phenomenon which can be computed only by knowing the actual Paradise gravity.
+\vs p012 3:8 \ublistelem{1.}\bibnobreakspace \bibemph{Physical Gravity.} Having formulated an estimate of the summation of the entire physical\hyp{}gravity capacity of the grand universe, they have laboriously effected a comparison of this finding with the estimated total of absolute gravity presence now operative. These calculations indicate that the total gravity action on the grand universe is a very small part of the estimated gravity pull of Paradise, computed on the basis of the gravity response of basic physical units of universe matter. These investigators reach the amazing conclusion that the central universe and the surrounding seven superuniverses are at the present time making use of only about 5\% of the active functioning of the Paradise absolute\hyp{}gravity grasp. In other words: At the present moment about 95\% of the active cosmic\hyp{}gravity action of the Isle of Paradise, computed on this totality theory, is engaged in controlling material systems beyond the borders of the present organized universes. These calculations all refer to absolute gravity; linear gravity is an interactive phenomenon which can be computed only by knowing the actual Paradise gravity.
 \vs p012 3:9 \ublistelem{2.}\bibnobreakspace \bibemph{Spiritual Gravity.} By the same technique of comparative estimation and calculation these researchers have explored the present reaction capacity of spirit gravity and, with the co\hyp{}operation of Solitary Messengers and other spirit personalities, have arrived at the summation of the active spirit gravity of the Second Source and Centre. And it is most instructive to note that they find about the same value for the actual and functional presence of spirit gravity in the grand universe that they postulate for the present total of active spirit gravity. In other words: At the present time practically the entire spirit gravity of the Eternal Son, computed on this theory of totality, is observable as functioning in the grand universe. If these findings are dependable, we may conclude that the universes now evolving in outer space are at the present time wholly nonspiritual. And if this is true, it would satisfactorily explain why spirit\hyp{}endowed beings are in possession of little or no information about these vast energy manifestations aside from knowing the fact of their physical existence.
-\vs p012 3:10 \ublistelem{3.}\bibnobreakspace \bibemph{Mind Gravity.} By these same principles of comparative computation these experts have attacked the problem of mind\hyp{}gravity presence and response. The mind unit of estimation was arrived at by averaging three material and three spiritual types of mentality, although the type of mind found in the power directors and their associates proved to be a disturbing factor in the effort to arrive at a basic unit for mind\hyp{}gravity estimation. There was little to impede the estimation of the present capacity of the Third Source and Centre for mind\hyp{}gravity function in accordance with this theory of totality. Although the findings in this instance are not so conclusive as in the estimates of physical and spirit gravity, they are, comparatively considered, very instructive, even intriguing. These investigators deduce that about 85\%\ of the mind\hyp{}gravity response to the intellectual drawing of the Conjoint Actor takes origin in the existing grand universe. This would suggest the possibility that mind activities are involved in connection with the observable physical activities now in progress throughout the realms of outer space. While this estimate is probably far from accurate, it accords, in principle, with our belief that intelligent force organizers are at present directing universe evolution in the space levels beyond the present outer limits of the grand universe. Whatever the nature of this postulated intelligence, it is apparently not spirit\hyp{}gravity responsive.
+\vs p012 3:10 \ublistelem{3.}\bibnobreakspace \bibemph{Mind Gravity.} By these same principles of comparative computation these experts have attacked the problem of mind\hyp{}gravity presence and response. The mind unit of estimation was arrived at by averaging three material and three spiritual types of mentality, although the type of mind found in the power directors and their associates proved to be a disturbing factor in the effort to arrive at a basic unit for mind\hyp{}gravity estimation. There was little to impede the estimation of the present capacity of the Third Source and Centre for mind\hyp{}gravity function in accordance with this theory of totality. Although the findings in this instance are not so conclusive as in the estimates of physical and spirit gravity, they are, comparatively considered, very instructive, even intriguing. These investigators deduce that about 85\% of the mind\hyp{}gravity response to the intellectual drawing of the Conjoint Actor takes origin in the existing grand universe. This would suggest the possibility that mind activities are involved in connection with the observable physical activities now in progress throughout the realms of outer space. While this estimate is probably far from accurate, it accords, in principle, with our belief that intelligent force organizers are at present directing universe evolution in the space levels beyond the present outer limits of the grand universe. Whatever the nature of this postulated intelligence, it is apparently not spirit\hyp{}gravity responsive.
 \vs p012 3:11 But all these computations are at best estimates based on assumed laws. We think they are fairly reliable. Even if a few spirit beings were located in outer space, their collective presence would not markedly influence calculations involving such enormous measurements.
 \vs p012 3:12 \pc \bibemph{Personality Gravity} is noncomputable. We recognize the circuit, but we cannot measure either qualitative or quantitative realities responsive thereto.
 \usection{4.\bibnobreakspace Space and Motion}
