--- a/tex/p031.tex
+++ b/tex/p031.tex
@@ -25,7 +25,7 @@
 \vs p031 2:3 \pc Gravity Messengers may be attached to a finaliter company in unlimited numbers, but only one messenger, the chief of his fellows, is mustered into the Mortal Corps of the Finality. This chief however has assigned to him a permanent staff of 999 fellow messengers, and as occasion may require, he may call upon the reserves of the order for assistants in unlimited numbers.
 \vs p031 2:4 Gravity Messengers and glorified mortal finaliters achieve a touching and profound affection for one another; they have much in common: One is a direct personalization of a fragment of the Universal Father, the other a creature personality existent in the surviving immortal soul fused with a fragment of the same Universal Father, the spirit Thought Adjuster.
 \usection{3.\bibnobreakspace Glorified Mortals}
-\vs p031 3:1 Ascendant Adjuster\hyp{}fused mortals compose the bulk of the primary Corps of the Finality. Together with the adopted and glorified seraphim they usually constitute 990 in each finaliter company. The proportion of mortals and angels in any one group varies, though the mortals far outnumber the seraphim. The Havona natives, glorified Material Sons, glorified midway creatures, the Gravity Messengers, and the unknown and missing member make up only 1\%\ of the corps; each company of 1,000 finaliters has places for just 10 of these nonmortal and nonseraphic personalities.
+\vs p031 3:1 Ascendant Adjuster\hyp{}fused mortals compose the bulk of the primary Corps of the Finality. Together with the adopted and glorified seraphim they usually constitute 990 in each finaliter company. The proportion of mortals and angels in any one group varies, though the mortals far outnumber the seraphim. The Havona natives, glorified Material Sons, glorified midway creatures, the Gravity Messengers, and the unknown and missing member make up only 1\% of the corps; each company of 1,000 finaliters has places for just 10 of these nonmortal and nonseraphic personalities.
 \vs p031 3:2 We of Uversa do not know the “finality destiny” of the ascendant mortals of time. At present they reside on Paradise and temporarily serve in the Corps of Light and Life, but such a tremendous course of ascendant training and such lengthy universe discipline must be designed to qualify them for even greater tests of trust and more sublime services of responsibility.
 \vs p031 3:3 \pc Notwithstanding that these ascendant mortals have attained Paradise, have been mustered into the Corps of the Finality, and have been sent back in large numbers to participate in the conduct of local universes and to assist in the administration of superuniverse affairs --- in the face of even this \bibemph{apparent} destiny, there remains the significant fact that they are of record as only sixth\hyp{}stage spirits. There undoubtedly remains one more step in the career of the Mortal Corps of the Finality. We do not know the nature of that step, but we have taken cognizance of, and here call attention to, three facts:
 \vs p031 3:4 \ublistelem{1.}\bibnobreakspace We know from the records that mortals are spirits of the first order during their sojourn in the minor sectors, and that they advance to the second order when translated to the major sectors, and to the third when they go forward to the central training worlds of the superuniverse. Mortals become quartan or graduate spirits after reaching the sixth circle of Havona and become spirits of the fifth order when they find the Universal Father. They subsequently attain the sixth stage of spirit existence upon taking the oath that musters them forever into the eternity assignment of the Corps of the Mortal Finality.
