--- a/tex/p046.tex
+++ b/tex/p046.tex
@@ -8,7 +8,7 @@
 \vs p046 1:4 \pc The lighting system of Jerusem should not be so difficult for you to comprehend. There are no days and nights, no seasons of heat and cold. The power transformers maintain 100,000 centres from which rarefied energies are projected upward through the planetary atmosphere, undergoing certain changes, until they reach the electric air\hyp{}ceiling of the sphere; and then these energies are reflected back and down as a gentle, sifting, and even light of about the intensity of Urantia sunlight when the sun is shining overhead at 10:00.
 \vs p046 1:5 Under such conditions of lighting, the light rays do not seem to come from one place; they just sift out of the sky, emanating equally from all space directions. This light is very similar to natural sunlight except that it contains very much less heat. Thus it will be recognized that such headquarters worlds are not luminous in space; if Jerusem were very near Urantia, it would not be visible.
 \vs p046 1:6 The gases which reflect this light\hyp{}energy from the Jerusem upper ionosphere back to the ground are very similar to those in the Urantia upper air belts which are concerned with the auroral phenomena of your so\hyp{}called northern lights, although these are produced by different causes. On Urantia it is this same gas shield which prevents the escape of the terrestrial broadcast waves, reflecting them earthward when they strike this gas belt in their direct outward flight. In this way broadcasts are held near the surface as they journey through the air around your world.
-\vs p046 1:7 This lighting of the sphere is uniformly maintained for 75\%\ of the Jerusem day, and then there is a gradual recession until, at the time of minimum illumination, the light is about that of your full moon on a clear night. This is the quiet hour for all Jerusem. Only the broadcast\hyp{}receiving stations are in operation during this period of rest and rehabilitation.
+\vs p046 1:7 This lighting of the sphere is uniformly maintained for 75\% of the Jerusem day, and then there is a gradual recession until, at the time of minimum illumination, the light is about that of your full moon on a clear night. This is the quiet hour for all Jerusem. Only the broadcast\hyp{}receiving stations are in operation during this period of rest and rehabilitation.
 \vs p046 1:8 \pc Jerusem receives faint light from several near\hyp{}by suns --- a sort of brilliant starlight --- but it is not dependent on them; worlds like Jerusem are not subject to the vicissitudes of sun disturbances, neither are they confronted with the problem of a cooling or dying sun.
 \vs p046 1:9 The 7 transitional study worlds and their 49 satellites are heated, lighted, energized, and watered by the Jerusem technique.
 \usection{2.\bibnobreakspace Physical Features of Jerusem}
