--- a/tex/p055.tex
+++ b/tex/p055.tex
@@ -34,11 +34,11 @@
 \vs p055 2:12 The universe is unfailing in the application of these equalizing techniques designed to ensure that no ascender shall be deprived of aught which is essential to his ascension experience.
 \usection{3.\bibnobreakspace The Golden Ages}
 \vs p055 3:1 During this age of light and life the world increasingly prospers under the fatherly rule of the Planetary Sovereign. By this time the worlds are progressing under the momentum of one language, one religion, and, on normal spheres, one race. But this age is not perfect. These worlds still have well\hyp{}appointed hospitals, homes for the care of the sick. There still remain the problems of caring for accidental injuries and the inescapable infirmities attendant upon the decrepitude of old age and the disorders of senility. Disease has not been entirely vanquished, neither have the earth animals been subdued in perfection; but such worlds are like Paradise in comparison with the early times of primitive man during the pre\hyp{}Planetary Prince age. You would instinctively describe such a realm --- could you be suddenly transported to a planet in this stage of development --- as heaven on earth.
-\vs p055 3:2 \pc Human government in the conduct of material affairs continues to function throughout this age of relative progress and perfection. The public activities of a world in the first stage of light and life which I recently visited were financed by the tithing technique. Every adult worker --- and all able\hyp{}bodied citizens worked at something --- paid 10\%\ of his income or increase to the public treasury, and it was disbursed as follows:
-\vs p055 3:3 \ublistelem{1.}\bibnobreakspace 3\%\ was expended in the promotion of truth --- science, education, and philosophy.
-\vs p055 3:4 \ublistelem{2.}\bibnobreakspace 3\%\ was devoted to beauty --- play, social leisure, and art.
-\vs p055 3:5 \ublistelem{3.}\bibnobreakspace 3\%\ was dedicated to goodness --- social service, altruism, and religion.
-\vs p055 3:6 \ublistelem{4.}\bibnobreakspace 1\%\ was assigned to the insurance reserves against the risk of incapacity for labour resultant from accident, disease, old age, or unpreventable disasters.
+\vs p055 3:2 \pc Human government in the conduct of material affairs continues to function throughout this age of relative progress and perfection. The public activities of a world in the first stage of light and life which I recently visited were financed by the tithing technique. Every adult worker --- and all able\hyp{}bodied citizens worked at something --- paid 10\% of his income or increase to the public treasury, and it was disbursed as follows:
+\vs p055 3:3 \ublistelem{1.}\bibnobreakspace 3\% was expended in the promotion of truth --- science, education, and philosophy.
+\vs p055 3:4 \ublistelem{2.}\bibnobreakspace 3\% was devoted to beauty --- play, social leisure, and art.
+\vs p055 3:5 \ublistelem{3.}\bibnobreakspace 3\% was dedicated to goodness --- social service, altruism, and religion.
+\vs p055 3:6 \ublistelem{4.}\bibnobreakspace 1\% was assigned to the insurance reserves against the risk of incapacity for labour resultant from accident, disease, old age, or unpreventable disasters.
 \vs p055 3:7 \pc The natural resources of this planet were administered as social possessions, community property.
 \vs p055 3:8 On this world the highest honour conferred upon a citizen was the order of “supreme service,” being the only degree of recognition ever to be granted in the morontia temple. This recognition was bestowed upon those who had long distinguished themselves in some phase of supermaterial discovery or planetary social service.
 \vs p055 3:9 The majority of social and administrative posts were held jointly by men and women. Most of the teaching was also done jointly; likewise all judicial trusts were discharged by similar associated couples.
