--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -41,7 +41,7 @@
 \usection{5.\bibnobreakspace Origin of Monmatia --- The Urantia Solar System}
 \vs p057 5:1 \bibemph{5,000,000,000} years ago your sun was a comparatively isolated blazing orb, having gathered to itself most of the near\hyp{}by circulating matter of space, remnants of the recent upheaval which attended its own birth.
 \vs p057 5:2 Today, your sun has achieved relative stability, but its 11½ year sunspot cycles betray that it was a variable star in its youth. In the early days of your sun the continued contraction and consequent gradual increase of temperature initiated tremendous convulsions on its surface. These titanic heaves required 3½ days to complete a cycle of varying brightness. This variable state, this periodic pulsation, rendered your sun highly responsive to certain outside influences which were to be shortly encountered.
-\vs p057 5:3 Thus was the stage of local space set for the unique origin of \bibemph{Monmatia,} that being the name of your sun’s planetary family, the solar system to which your world belongs. Less than 1\%\ of the planetary systems of Orvonton have had a similar origin.
+\vs p057 5:3 Thus was the stage of local space set for the unique origin of \bibemph{Monmatia,} that being the name of your sun’s planetary family, the solar system to which your world belongs. Less than 1\% of the planetary systems of Orvonton have had a similar origin.
 \vs p057 5:4 \pc \bibemph{4,500,000,000} years ago the enormous Angona system began its approach to the neighbourhood of this solitary sun. The centre of this great system was a dark giant of space, solid, highly charged, and possessing tremendous gravity pull.
 \vs p057 5:5 As Angona more closely approached the sun, at moments of maximum expansion during solar pulsations, streams of gaseous material were shot out into space as gigantic solar tongues. At first these flaming gas tongues would invariably fall back into the sun, but as Angona drew nearer and nearer, the gravity pull of the gigantic visitor became so great that these tongues of gas would break off at certain points, the roots falling back into the sun while the outer sections would become detached to form independent bodies of matter, solar meteorites, which immediately started to revolve about the sun in elliptical orbits of their own.
 \vs p057 5:6 As the Angona system drew nearer, the solar extrusions grew larger and larger; more and more matter was drawn from the sun to become independent circulating bodies in surrounding space. This situation developed for about 500,000 years until Angona made its closest approach to the sun; whereupon the sun, in conjunction with one of its periodic internal convulsions, experienced a partial disruption; from opposite sides and simultaneously, enormous volumes of matter were disgorged. From the Angona side there was drawn out a vast column of solar gases, rather pointed at both ends and markedly bulging at the centre, which became permanently detached from the immediate gravity control of the sun.
@@ -91,7 +91,7 @@
 \vs p057 8:12 Nowhere on the surface of the world will there be found more of the modified remnants of these ancient preocean rocks than in north\hyp{}eastern Canada around Hudson Bay. This extensive granite elevation is composed of stone belonging to the preoceanic ages. These rock layers have been heated, bent, twisted, upcrumpled, and again and again have they passed through these distorting metamorphic experiences.
 \vs p057 8:13 Throughout the oceanic ages, enormous layers of fossil\hyp{}free stratified stone were deposited on this ancient ocean bottom. (Limestone can form as a result of chemical precipitation; not all of the older limestone was produced by marine\hyp{}life deposition.) In none of these ancient rock formations will there be found evidences of life; they contain no fossils unless, by some chance, later deposits of the water ages have become mixed with these older prelife layers.
 \vs p057 8:14 The earth’s early crust was highly unstable, but mountains were not in process of formation. The planet contracted under gravity pressure as it formed. Mountains are not the result of the collapse of the cooling crust of a contracting sphere; they appear later on as a result of the action of rain, gravity, and erosion.
-\vs p057 8:15 The continental land mass of this era increased until it covered almost 10\%\ of the earth’s surface. Severe earthquakes did not begin until the continental mass of land emerged well above the water. When they once began, they increased in frequency and severity for ages. For millions upon millions of years earthquakes have diminished, but Urantia still has an average of 15 daily.
+\vs p057 8:15 The continental land mass of this era increased until it covered almost 10\% of the earth’s surface. Severe earthquakes did not begin until the continental mass of land emerged well above the water. When they once began, they increased in frequency and severity for ages. For millions upon millions of years earthquakes have diminished, but Urantia still has an average of 15 daily.
 \vs p057 8:16 \pc \bibemph{850,000,000} years ago the first real epoch of the stabilization of the earth’s crust began. Most of the heavier metals had settled down toward the centre of the globe; the cooling crust had ceased to cave in on such an extensive scale as in former ages. There was established a better balance between the land extrusion and the heavier ocean bed. The flow of the subcrustal lava bed became well\hyp{}nigh world\hyp{}wide, and this compensated and stabilized the fluctuations due to cooling, contracting, and superficial shifting.
 \vs p057 8:17 Volcanic eruptions and earthquakes continued to diminish in frequency and severity. The atmosphere was clearing of volcanic gases and water vapour, but the percentage of carbon dioxide was still high.
 \vs p057 8:18 Electric disturbances in the air and in the earth were also decreasing. The lava flows had brought to the surface a mixture of elements which diversified the crust and better insulated the planet from certain space\hyp{}energies. And all of this did much to facilitate the control of terrestrial energy and to regulate its flow, as is disclosed by the functioning of the magnetic poles.
