--- a/tex/p059.tex
+++ b/tex/p059.tex
@@ -32,7 +32,7 @@
 \vs p059 1:20 This was the biogeologic picture of Urantia at the end of that long period of the world’s history, embracing 50,000,000 years, designated by your geologists as the \bibemph{Cambrian.}
 \usection{2.\bibnobreakspace The First Continental Flood Stage\\The Invertebrate\hyp{}Animal Age}
 \vs p059 2:1 The periodic phenomena of land elevation and land sinking characteristic of these times were all gradual and nonspectacular, being accompanied by little or no volcanic action. Throughout all of these successive land elevations and depressions the Asiatic mother continent did not fully share the history of the other land bodies. It experienced many inundations, dipping first in one direction and then another, more particularly in its earlier history, but it does not present the uniform rock deposits which may be discovered on the other continents. In recent ages Asia has been the most stable of all the land masses.
-\vs p059 2:2 \pc \bibemph{350,000,000} years ago saw the beginning of the great flood period of all the continents except central Asia. The land masses were repeatedly covered with water; only the coastal highlands remained above these shallow but widespread oscillatory inland seas. Three major inundations characterized this period, but before it ended, the continents again arose, the total land emergence being 15\%\ greater than now exists. The Caribbean region was highly elevated. This period is not well marked off in Europe because the land fluctuations were less, while the volcanic action was more persistent.
+\vs p059 2:2 \pc \bibemph{350,000,000} years ago saw the beginning of the great flood period of all the continents except central Asia. The land masses were repeatedly covered with water; only the coastal highlands remained above these shallow but widespread oscillatory inland seas. Three major inundations characterized this period, but before it ended, the continents again arose, the total land emergence being 15\% greater than now exists. The Caribbean region was highly elevated. This period is not well marked off in Europe because the land fluctuations were less, while the volcanic action was more persistent.
 \vs p059 2:3 \pc \bibemph{340,000,000} years ago there occurred another extensive land sinking except in Asia and Australia. The waters of the world’s oceans were generally commingled. This was a great limestone age, much of its stone being laid down by lime\hyp{}secreting algae.
 \vs p059 2:4 A few million years later large portions of the American continents and Europe began to emerge from the water. In the Western Hemisphere only an arm of the Pacific Ocean remained over Mexico and the present Rocky Mountain regions, but near the close of this epoch the Atlantic and Pacific coasts again began to sink.
 \vs p059 2:5 \pc \bibemph{330,000,000} years ago marks the beginning of a time sector of comparative quiet all over the world, with much land again above water. The only exception to this reign of terrestrial quiet was the eruption of the great North American volcano of eastern Kentucky, one of the greatest single volcanic activities the world has ever known. The ashes of this volcano covered 193 km\ts{2} to a depth of 4.5--6\,m.
