--- a/tex/p070.tex
+++ b/tex/p070.tex
@@ -106,7 +106,7 @@
 \vs p070 7:15 \pc Secret societies contributed to the building up of social castes chiefly by the mysterious character of their initiations. The members of these societies first wore masks to frighten the curious away from their mourning rites --- ancestor worship. Later this ritual developed into a pseudo seance at which ghosts were reputed to have appeared. The ancient societies of the “new birth” used signs and employed a special secret language; they also forswore certain foods and drinks. They acted as night police and otherwise functioned in a wide range of social activities.
 \vs p070 7:16 All secret associations imposed an oath, enjoined confidence, and taught the keeping of secrets. These orders awed and controlled the mobs; they also acted as vigilance societies, thus practising lynch law. They were the first spies when the tribes were at war and the first secret police during times of peace. Best of all they kept unscrupulous kings on the anxious seat. To offset them, the kings fostered their own secret police.
 \vs p070 7:17 These societies gave rise to the first political parties. The first party government was “the strong” \bibemph{vs.} “the weak.” In ancient times a change of administration only followed civil war, abundant proof that the weak had become strong.
-\vs p070 7:18 These clubs were employed by merchants to collect debts and by rulers to collect taxes. Taxation has been a long struggle, one of the earliest forms being the tithe, 10\%\ of the hunt or spoils. Taxes were originally levied to keep up the king’s house, but it was found that they were easier to collect when disguised as an offering for the support of the temple service.
+\vs p070 7:18 These clubs were employed by merchants to collect debts and by rulers to collect taxes. Taxation has been a long struggle, one of the earliest forms being the tithe, 10\% of the hunt or spoils. Taxes were originally levied to keep up the king’s house, but it was found that they were easier to collect when disguised as an offering for the support of the temple service.
 \vs p070 7:19 By and by these secret associations grew into the first charitable organizations and later evolved into the earlier religious societies --- the forerunners of churches. Finally some of these societies became intertribal, the first international fraternities.
 \usection{8.\bibnobreakspace Social Classes}
 \vs p070 8:1 The mental and physical inequality of human beings ensures that social classes will appear. The only worlds without social strata are the most primitive and the most advanced. A dawning civilization has not yet begun the differentiation of social levels, while a world settled in light and life has largely effaced these divisions of mankind, which are so characteristic of all intermediate evolutionary stages.
