--- a/tex/p072.tex
+++ b/tex/p072.tex
@@ -4,7 +4,7 @@
 \vs p072 0:2 Of all the Satania worlds which became isolated because of participation in the Lucifer rebellion, this planet has experienced a history most like that of Urantia. The similarity of the two spheres undoubtedly explains why permission to make this extraordinary presentation was granted, for it is most unusual for the system rulers to consent to the narration on one planet of the affairs of another.
 \vs p072 0:3 This planet, like Urantia, was led astray by the disloyalty of its Planetary Prince in connection with the Lucifer rebellion. It received a Material Son shortly after Adam came to Urantia, and this Son also defaulted, leaving the sphere isolated, since a Magisterial Son has never been bestowed upon its mortal races.
 \usection{1.\bibnobreakspace The Continental Nation}
-\vs p072 1:1 Notwithstanding all these planetary handicaps a very superior civilization is evolving on an isolated continent about the size of Australia. This nation numbers about 140,000,000. Its people are a mixed race, predominantly blue and yellow, having a slightly greater proportion of violet than the so\hyp{}called white race of Urantia. These different races are not yet fully blended, but they fraternize and socialize very acceptably. The average length of life on this continent is now 90 years, 15\%\ higher than that of any other people on the planet.
+\vs p072 1:1 Notwithstanding all these planetary handicaps a very superior civilization is evolving on an isolated continent about the size of Australia. This nation numbers about 140,000,000. Its people are a mixed race, predominantly blue and yellow, having a slightly greater proportion of violet than the so\hyp{}called white race of Urantia. These different races are not yet fully blended, but they fraternize and socialize very acceptably. The average length of life on this continent is now 90 years, 15\% higher than that of any other people on the planet.
 \vs p072 1:2 The industrial mechanism of this nation enjoys a certain great advantage derived from the unique topography of the continent. The high mountains, on which heavy rains fall 8 months in the year, are situated at the very centre of the country. This natural arrangement favours the utilization of water power and greatly facilitates the irrigation of the more arid western quarter of the continent.
 \vs p072 1:3 These people are self\hyp{}sustaining, that is, they can live indefinitely without importing anything from the surrounding nations. Their natural resources are replete, and by scientific techniques they have learned how to compensate for their deficiencies in the essentials of life. They enjoy a brisk domestic commerce but have little foreign trade owing to the universal hostility of their less progressive neighbours.
 \vs p072 1:4 \pc This continental nation, in general, followed the evolutionary trend of the planet: The development from the tribal stage to the appearance of strong rulers and kings occupied thousands of years. The unconditional monarchs were succeeded by many different orders of government --- abortive republics, communal states, and dictators came and went in endless profusion. This growth continued until about 500 years ago when, during a politically fermenting period, one of the nation’s powerful dictator\hyp{}triumvirs had a change of heart. He volunteered to abdicate upon condition that one of the other rulers, the baser of the remaining two, also vacate his dictatorship. Thus was the sovereignty of the continent placed in the hands of one ruler. The unified state progressed under strong monarchial rule for over 100 years, during which there evolved a masterful charter of liberty.
@@ -46,7 +46,7 @@
 \vs p072 4:6 Every child graduating from the precollege school system at 18 is a skilled artisan. Then begins the study of books and the pursuit of special knowledge, either in the adult schools or in the colleges. When a brilliant student completes his work ahead of schedule, he is granted an award of time and means wherewith he may execute some pet project of his own devising. The entire educational system is designed to adequately train the individual.
 \usection{5.\bibnobreakspace Industrial Organization}
 \vs p072 5:1 The industrial situation among this people is far from their ideals; capital and labour still have their troubles, but both are becoming adjusted to the plan of sincere co\hyp{}operation. On this unique continent the workers are increasingly becoming shareholders in all industrial concerns; every intelligent labourer is slowly becoming a small capitalist.
-\vs p072 5:2 Social antagonisms are lessening, and good will is growing apace. No grave economic problems have arisen out of the abolition of slavery (over 100 years ago) since this adjustment was effected gradually by the liberation of 2\%\ each year. Those slaves who satisfactorily passed mental, moral, and physical tests were granted citizenship; many of these superior slaves were war captives or children of such captives. Some 50 years ago they deported the last of their inferior slaves, and still more recently they are addressing themselves to the task of reducing the numbers of their degenerate and vicious classes.
+\vs p072 5:2 Social antagonisms are lessening, and good will is growing apace. No grave economic problems have arisen out of the abolition of slavery (over 100 years ago) since this adjustment was effected gradually by the liberation of 2\% each year. Those slaves who satisfactorily passed mental, moral, and physical tests were granted citizenship; many of these superior slaves were war captives or children of such captives. Some 50 years ago they deported the last of their inferior slaves, and still more recently they are addressing themselves to the task of reducing the numbers of their degenerate and vicious classes.
 \vs p072 5:3 \pc These people have recently developed new techniques for the adjustment of industrial misunderstandings and for the correction of economic abuses which are marked improvements over their older methods of settling such problems. Violence has been outlawed as a procedure in adjusting either personal or industrial differences. Wages, profits, and other economic problems are not rigidly regulated, but they are in general controlled by the industrial legislatures, while all disputes arising out of industry are passed upon by the industrial courts.
 \vs p072 5:4 The industrial courts are only 30 years old but are functioning very satisfactorily. The most recent development provides that hereafter the industrial courts shall recognize legal compensation as falling in 3 divisions:
 \vs p072 5:5 \ublistelem{1.}\bibnobreakspace Legal rates of interest on invested capital.
@@ -73,12 +73,12 @@
 \vs p072 7:3 \pc Cities have no taxing power, neither can they go in debt. They receive per capita allowances from the state treasury and must supplement such revenue from the earnings of their socialistic enterprises and by licensing various commercial activities.
 \vs p072 7:4 The rapid\hyp{}transit facilities, which make it practical greatly to extend the city boundaries, are under municipal control. The city fire departments are supported by the fire\hyp{}prevention and insurance foundations, and all buildings, in city or country, are fireproof --- have been for over 75 years.
 \vs p072 7:5 There are no municipally appointed peace officers; the police forces are maintained by the state governments. This department is recruited almost entirely from the unmarried men between 25 and 50. Most of the states assess a rather heavy bachelor tax, which is remitted to all men joining the state police. In the average state the police force is now only \bibfrac{1}{10} as large as it was 50 years ago.
-\vs p072 7:6 \pc There is little or no uniformity among the taxation schemes of the 100 comparatively free and sovereign states as economic and other conditions vary greatly in different sections of the continent. Every state has 10 basic constitutional provisions which cannot be modified except by consent of the federal supreme court, and one of these articles prevents levying a tax of more than 1\%\ on the value of any property in any one year, homesites, whether in city or country, being exempted.
+\vs p072 7:6 \pc There is little or no uniformity among the taxation schemes of the 100 comparatively free and sovereign states as economic and other conditions vary greatly in different sections of the continent. Every state has 10 basic constitutional provisions which cannot be modified except by consent of the federal supreme court, and one of these articles prevents levying a tax of more than 1\% on the value of any property in any one year, homesites, whether in city or country, being exempted.
 \vs p072 7:7 The federal government cannot go in debt, and a \bibfrac{3}{4} referendum is required before any state can borrow except for purposes of war. Since the federal government cannot incur debt, in the event of war the National Council of Defence is empowered to assess the states for money, as well as for men and materials, as it may be required. But no debt may run for more than 25 years.
 \vs p072 7:8 \pc Income to support the federal government is derived from the following 5 sources:
 \vs p072 7:9 \ublistelem{1.}\bibnobreakspace \bibemph{Import duties.} All imports are subject to a tariff designed to protect the standard of living on this continent, which is far above that of any other nation on the planet. These tariffs are set by the highest industrial court after both houses of the industrial congress have ratified the recommendations of the chief executive of economic affairs, who is the joint appointee of these two legislative bodies. The upper industrial house is elected by labour, the lower by capital.
 \vs p072 7:10 \ublistelem{2.}\bibnobreakspace \bibemph{Royalties.} The federal government encourages invention and original creations in the 10 regional laboratories, assisting all types of geniuses --- artists, authors, and scientists --- and protecting their patents. In return the government takes one half the profits realized from all such inventions and creations, whether pertaining to machines, books, artistry, plants, or animals.
-\vs p072 7:11 \ublistelem{3.}\bibnobreakspace \bibemph{Inheritance tax.} The federal government levies a graduated inheritance tax ranging from 1\%\ to 50\%, depending on the size of an estate as well as on other conditions.
+\vs p072 7:11 \ublistelem{3.}\bibnobreakspace \bibemph{Inheritance tax.} The federal government levies a graduated inheritance tax ranging from 1\% to 50\%, depending on the size of an estate as well as on other conditions.
 \vs p072 7:12 \ublistelem{4.}\bibnobreakspace \bibemph{Military equipment.} The government earns a considerable sum from the leasing of military and naval equipment for commercial and recreational usages.
 \vs p072 7:13 \ublistelem{5.}\bibnobreakspace \bibemph{Natural resources.} The income from natural resources, when not fully required for the specific purposes designated in the charter of federal statehood, is turned into the national treasury.
 \vs p072 7:14 \pc Federal appropriations, except war funds assessed by the National Council of Defence, are originated in the upper legislative house, concurred in by the lower house, approved by the chief executive, and finally validated by the federal budget commission of 100. The members of this commission are nominated by the state governors and elected by the state legislatures to serve for 24 years, \bibfrac{1}{4} being elected every 6 years. Every 6 years this body, by a \bibfrac{3}{4} ballot, chooses one of its number as chief, and he thereby becomes director\hyp{}controller of the federal treasury.
@@ -98,11 +98,11 @@
 \vs p072 9:5 \ublistelem{4.}\bibnobreakspace There are 5 brackets of suffrage reflecting the average yearly taxes paid for each half\hyp{}decade period. Heavy taxpayers are permitted extra votes up to 5. This grant is independent of all other recognition, but in no case can any person cast over 10 ballots.
 \vs p072 9:6 \ublistelem{5.}\bibnobreakspace At the time this franchise plan was adopted, the territorial method of voting was abandoned in favour of the economic or functional system. All citizens now vote as members of industrial, social, or professional groups, regardless of their residence. Thus the electorate consists of solidified, unified, and intelligent groups who elect only their best members to positions of governmental trust and responsibility. There is one exception to this scheme of functional or group suffrage: The election of a federal chief executive every 6 years is by nation\hyp{}wide ballot, and no citizen casts over one vote.
 \vs p072 9:7 \pc Thus, except in the election of the chief executive, suffrage is exercised by economic, professional, intellectual, and social groupings of the citizenry. The ideal state is organic, and every free and intelligent group of citizens represents a vital and functioning organ within the larger governmental organism.
-\vs p072 9:8 The schools of statesmanship have power to start proceedings in the state courts looking toward the disenfranchisement of any defective, idle, indifferent, or criminal individual. These people recognize that, when 50\%\ of a nation is inferior or defective and possesses the ballot, such a nation is doomed. They believe the dominance of mediocrity spells the downfall of any nation. Voting is compulsory, heavy fines being assessed against all who fail to cast their ballots.
+\vs p072 9:8 The schools of statesmanship have power to start proceedings in the state courts looking toward the disenfranchisement of any defective, idle, indifferent, or criminal individual. These people recognize that, when 50\% of a nation is inferior or defective and possesses the ballot, such a nation is doomed. They believe the dominance of mediocrity spells the downfall of any nation. Voting is compulsory, heavy fines being assessed against all who fail to cast their ballots.
 \usection{10.\bibnobreakspace Dealing with Crime}
 \vs p072 10:1 The methods of this people in dealing with crime, insanity, and degeneracy, while in some ways pleasing, will, no doubt, in others prove shocking to most Urantians. Ordinary criminals and the defectives are placed, by sexes, in different agricultural colonies and are more than self\hyp{}supporting. The more serious habitual criminals and the incurably insane are sentenced to death in the lethal gas chambers by the courts. Numerous crimes aside from murder, including betrayal of governmental trust, also carry the death penalty, and the visitation of justice is sure and swift.
-\vs p072 10:2 These people are passing out of the negative into the positive era of law. Recently they have gone so far as to attempt the prevention of crime by sentencing those who are believed to be potential murderers and major criminals to life service in the detention colonies. If such convicts subsequently demonstrate that they have become more normal, they may be either paroled or pardoned. The homicide rate on this continent is only 1\%\ of that among the other nations.
-\vs p072 10:3 Efforts to prevent the breeding of criminals and defectives were begun over 100 years ago and have already yielded gratifying results. There are no prisons or hospitals for the insane. For one reason, there are only about 10\%\ as many of these groups as are found on Urantia.
+\vs p072 10:2 These people are passing out of the negative into the positive era of law. Recently they have gone so far as to attempt the prevention of crime by sentencing those who are believed to be potential murderers and major criminals to life service in the detention colonies. If such convicts subsequently demonstrate that they have become more normal, they may be either paroled or pardoned. The homicide rate on this continent is only 1\% of that among the other nations.
+\vs p072 10:3 Efforts to prevent the breeding of criminals and defectives were begun over 100 years ago and have already yielded gratifying results. There are no prisons or hospitals for the insane. For one reason, there are only about 10\% as many of these groups as are found on Urantia.
 \usection{11.\bibnobreakspace Military Preparedness}
 \vs p072 11:1 Graduates of the federal military schools may be commissioned as “guardians of civilization” in 7 ranks, in accordance with ability and experience, by the president of the National Council of Defence. This council consists of 25 members, nominated by the highest parental, educational, and industrial tribunals, confirmed by the federal supreme court, and presided over ex officio by the chief of staff of co\hyp{}ordinated military affairs. Such members serve until they are 70 years of age.
 \vs p072 11:2 The courses pursued by such commissioned officers are 4 years in length and are invariably correlated with the mastery of some trade or profession. Military training is never given without this associated industrial, scientific, or professional schooling. When military training is finished, the individual has, during his 4 years’ course, received one half of the education imparted in any of the special schools where the courses are likewise 4 years in length. In this way the creation of a professional military class is avoided by providing this opportunity for a large number of men to support themselves while securing the first half of a technical or professional training.
