--- a/tex/p073.tex
+++ b/tex/p073.tex
@@ -36,7 +36,7 @@
 \vs p073 5:3 The sanitary arrangements of the Garden were far in advance of anything that had been attempted theretofore on Urantia. The drinking water of Eden was kept wholesome by the strict observance of the sanitary regulations designed to conserve its purity. During these early times much trouble came about from neglect of these rules, but Van gradually impressed upon his associates the importance of allowing nothing to fall into the water supply of the Garden.
 \vs p073 5:4 Before the later establishment of a sewage\hyp{}disposal system the Edenites practised the scrupulous burial of all waste or decomposing material. Amadon’s inspectors made their rounds each day in search for possible causes of sickness. Urantians did not again awaken to the importance of the prevention of human diseases until the later times of the XIX and XX centuries. Before the disruption of the Adamic regime a covered brick\hyp{}conduit disposal system had been constructed which ran beneath the walls and emptied into the river of Eden almost 1.6\,km beyond the outer or lesser wall of the Garden.
 \vs p073 5:5 By the time of Adam’s arrival most of the plants of that section of the world were growing in Eden. Already had many of the fruits, cereals, and nuts been greatly improved. Many modern vegetables and cereals were first cultivated here, but scores of varieties of food plants were subsequently lost to the world.
-\vs p073 5:6 About 5\%\ of the Garden was under high artificial cultivation, 15\%\ partially cultivated, the remainder being left in a more or less natural state pending the arrival of Adam, it being thought best to finish the park in accordance with his ideas.
+\vs p073 5:6 About 5\% of the Garden was under high artificial cultivation, 15\% partially cultivated, the remainder being left in a more or less natural state pending the arrival of Adam, it being thought best to finish the park in accordance with his ideas.
 \vs p073 5:7 And so was the Garden of Eden made ready for the reception of the promised Adam and his consort. And this Garden would have done honour to a world under perfected administration and normal control. Adam and Eve were well pleased with the general plan of Eden, though they made many changes in the furnishings of their own personal dwelling.
 \vs p073 5:8 Although the work of embellishment was hardly finished at the time of Adam’s arrival, the place was already a gem of botanic beauty; and during the early days of his sojourn in Eden the whole Garden took on new form and assumed new proportions of beauty and grandeur. Never before this time nor after has Urantia harboured such a beautiful and replete exhibition of horticulture and agriculture.
 \usection{6.\bibnobreakspace The Tree of Life}
