--- a/tex/p078.tex
+++ b/tex/p078.tex
@@ -44,18 +44,18 @@
 \vs p078 5:1 For 20,000 years the culture of the second garden persisted, but it experienced a steady decline until about 15,000\,B.C., when the regeneration of the Sethite priesthood and the leadership of Amosad inaugurated a brilliant era. The massive waves of civilization which later spread over Eurasia immediately followed the great renaissance of the Garden consequent upon the extensive union of the Adamites with the surrounding mixed Nodites to form the Andites.
 \vs p078 5:2 These Andites inaugurated new advances throughout Eurasia and North Africa. From Mesopotamia through Sinkiang the Andite culture was dominant, and the steady migration toward Europe was continuously offset by new arrivals from Mesopotamia. But it is hardly correct to speak of the Andites as a race in Mesopotamia proper until near the beginning of the terminal migrations of the mixed descendants of Adam. By this time even the races in the second garden had become so blended that they could no longer be considered Adamites.
 \vs p078 5:3 The civilization of Turkestan was constantly being revived and refreshed by the newcomers from Mesopotamia, especially by the later Andite cavalrymen. The so\hyp{}called Aryan mother tongue was in process of formation in the highlands of Turkestan; it was a blend of the Andonic dialect of that region with the language of the Adamsonites and later Andites. Many modern languages are derived from this early speech of these central Asian tribes who conquered Europe, India, and the upper stretches of the Mesopotamian plains. This ancient language gave the Occidental tongues all of that similarity which is called Aryan.
-\vs p078 5:4 \pc By 12,000\,B.C. \bibfrac{3}{4} of the Andite stock of the world was resident in northern and eastern Europe, and when the later and final exodus from Mesopotamia took place, 65\%\ of these last waves of emigration entered Europe.
+\vs p078 5:4 \pc By 12,000\,B.C. \bibfrac{3}{4} of the Andite stock of the world was resident in northern and eastern Europe, and when the later and final exodus from Mesopotamia took place, 65\% of these last waves of emigration entered Europe.
 \vs p078 5:5 \pc The Andites not only migrated to Europe but to northern China and India, while many groups penetrated to the ends of the earth as missionaries, teachers, and traders. They contributed considerably to the northern groups of the Saharan Sangik peoples. But only a few teachers and traders ever penetrated farther south in Africa than the headwaters of the Nile. Later on, mixed Andites and Egyptians followed down both the east and west coasts of Africa well below the equator, but they did not reach Madagascar.
 \vs p078 5:6 These Andites were the so\hyp{}called Dravidian and later Aryan conquerors of India; and their presence in central Asia greatly upstepped the ancestors of the Turanians. Many of this race journeyed to China by way of both Sinkiang and Tibet and added desirable qualities to the later Chinese stocks. From time to time small groups made their way into Japan, Formosa, the East Indies, and southern China, though very few entered southern China by the coastal route.
 \vs p078 5:7 132 of this race, embarking in a fleet of small boats from Japan, eventually reached South America and by intermarriage with the natives of the Andes established the ancestry of the later rulers of the Incas. They crossed the Pacific by easy stages, tarrying on the many islands they found along the way. The islands of the Polynesian group were both more numerous and larger then than now, and these Andite sailors, together with some who followed them, biologically modified the native groups in transit. Many flourishing centres of civilization grew up on these now submerged lands as a result of Andite penetration. Easter Island was long a religious and administrative centre of one of these lost groups. But of the Andites who navigated the Pacific of long ago none but the 132 ever reached the mainland of the Americas.
 \vs p078 5:8 \pc The migratory conquests of the Andites continued on down to their final dispersions, from 8000 to 6000\,B.C. As they poured out of Mesopotamia, they continuously depleted the biologic reserves of their homelands while markedly strengthening the surrounding peoples. And to every nation to which they journeyed, they contributed humour, art, adventure, music, and manufacture. They were skillful domesticators of animals and expert agriculturists. For the time being, at least, their presence usually improved the religious beliefs and moral practices of the older races. And so the culture of Mesopotamia quietly spread out over Europe, India, China, northern Africa, and the Pacific Islands.
 \usection{6.\bibnobreakspace The Last Andite Dispersions}
 \vs p078 6:1 The last three waves of Andites poured out of Mesopotamia between 8000 and 6000\,B.C. These three great waves of culture were forced out of Mesopotamia by the pressure of the hill tribes to the east and the harassment of the plainsmen of the west. The inhabitants of the Euphrates valley and adjacent territory went forth in their final exodus in several directions:
-\vs p078 6:2 65\%\ entered Europe by the Caspian Sea route to conquer and amalgamate with the newly appearing white races --- the blend of the blue men and the earlier Andites.
+\vs p078 6:2 65\% entered Europe by the Caspian Sea route to conquer and amalgamate with the newly appearing white races --- the blend of the blue men and the earlier Andites.
 \vs p078 6:3 10\%, including a large group of the Sethite priests, moved eastward through the Elamite highlands to the Iranian plateau and Turkestan. Many of their descendants were later driven into India with their Aryan brethren from the regions to the north.
-\vs p078 6:4 10\%\ of the Mesopotamians turned eastward in their northern trek, entering Sinkiang, where they blended with the Andite\hyp{}yellow inhabitants. The majority of the able offspring of this racial union later entered China and contributed much to the immediate improvement of the northern division of the yellow race.
-\vs p078 6:5 10\%\ of these fleeing Andites made their way across Arabia and entered Egypt.
-\vs p078 6:6 \pc 5\%\ of the Andites, the very superior culture of the coastal district about the mouths of the Tigris and Euphrates who had kept themselves free from intermarriage with the inferior neighbouring tribesmen, refused to leave their homes. This group represented the survival of many superior Nodite and Adamite strains.
+\vs p078 6:4 10\% of the Mesopotamians turned eastward in their northern trek, entering Sinkiang, where they blended with the Andite\hyp{}yellow inhabitants. The majority of the able offspring of this racial union later entered China and contributed much to the immediate improvement of the northern division of the yellow race.
+\vs p078 6:5 10\% of these fleeing Andites made their way across Arabia and entered Egypt.
+\vs p078 6:6 \pc 5\% of the Andites, the very superior culture of the coastal district about the mouths of the Tigris and Euphrates who had kept themselves free from intermarriage with the inferior neighbouring tribesmen, refused to leave their homes. This group represented the survival of many superior Nodite and Adamite strains.
 \vs p078 6:7 \pc The Andites had almost entirely evacuated this region by 6000\,B.C., though their descendants, largely mixed with the surrounding Sangik races and the Andonites of Asia Minor, were there to give battle to the northern and eastern invaders at a much later date.
 \vs p078 6:8 The cultural age of the second garden was terminated by the increasing infiltration of the surrounding inferior stocks. Civilization moved westward to the Nile and the Mediterranean islands, where it continued to thrive and advance long after its fountainhead in Mesopotamia had deteriorated. And this unchecked influx of inferior peoples prepared the way for the later conquest of all Mesopotamia by the northern barbarians who drove out the residual strains of ability. Even in later years the cultured residue still resented the presence of these ignorant and uncouth invaders.
 \usection{7.\bibnobreakspace The Floods in Mesopotamia}
