--- a/tex/p081.tex
+++ b/tex/p081.tex
@@ -106,7 +106,7 @@
 \vs p081 6:39 \ublistelem{14.}\bibnobreakspace \bibemph{Social changes.} Society is not a divine institution; it is a phenomenon of progressive evolution; and advancing civilization is always delayed when its leaders are slow in making those changes in the social organization which are essential to keeping pace with the scientific developments of the age. For all that, things must not be despised just because they are old, neither should an idea be unconditionally embraced just because it is novel and new.
 \vs p081 6:40 Man should be unafraid to experiment with the mechanisms of society. But always should these adventures in cultural adjustment be controlled by those who are fully conversant with the history of social evolution; and always should these innovators be counselled by the wisdom of those who have had practical experience in the domains of contemplated social or economic experiment. \bibemph{No great social or economic change should be attempted suddenly.} Time is essential to all types of human adjustment --- physical, social, or economic. Only moral and spiritual adjustments can be made on the spur of the moment, and even these require the passing of time for the full outworking of their material and social repercussions. The ideals of the race are the chief support and assurance during the critical times when civilization is in transit from one level to another.
 \vs p081 6:41 \ublistelem{15.}\bibnobreakspace \bibemph{The prevention of transitional breakdown.} Society is the offspring of age upon age of trial and error; it is what survived the selective adjustments and readjustments in the successive stages of mankind’s agelong rise from animal to human levels of planetary status. The great danger to any civilization --- at any one moment --- is the threat of breakdown during the time of transition from the established methods of the past to those new and better, but untried, procedures of the future.
-\vs p081 6:42 Leadership is vital to progress. Wisdom, insight, and foresight are indispensable to the endurance of nations. Civilization is never really jeopardized until able leadership begins to vanish. And the quantity of such wise leadership has never exceeded 1\%\ of the population.
+\vs p081 6:42 Leadership is vital to progress. Wisdom, insight, and foresight are indispensable to the endurance of nations. Civilization is never really jeopardized until able leadership begins to vanish. And the quantity of such wise leadership has never exceeded 1\% of the population.
 \vs p081 6:43 And it was by these rungs on the evolutionary ladder that civilization climbed to that place where those mighty influences could be initiated which have culminated in the rapidly expanding culture of the XX century. And only by adherence to these essentials can man hope to maintain his present\hyp{}day civilizations while providing for their continued development and certain survival.
 \vs p081 6:44 \pc This is the gist of the long, long struggle of the peoples of earth to establish civilization since the age of Adam. Present\hyp{}day culture is the net result of this strenuous evolution. Before the discovery of printing, progress was relatively slow since one generation could not so rapidly benefit from the achievements of its predecessors. But now human society is plunging forward under the force of the accumulated momentum of all the ages through which civilization has struggled.
 \vsetoff
