--- a/tex/p093.tex
+++ b/tex/p093.tex
@@ -54,7 +54,7 @@
 \vs p093 5:10 Upon returning with his family to Salem, Abraham began to mature his military projects. He was soon recognized as the civil ruler of the Salem territory and had confederated under his leadership seven near\hyp{}by tribes. Indeed, it was with great difficulty that Melchizedek restrained Abraham, who was fired with a zeal to go forth and round up the neighbouring tribes with the sword that they might thus more quickly be brought to a knowledge of the Salem truths.
 \vs p093 5:11 Melchizedek maintained peaceful relations with all the surrounding tribes; he was not militaristic and was never attacked by any of the armies as they moved back and forth. He was entirely willing that Abraham should formulate a defensive policy for Salem such as was subsequently put into effect, but he would not approve of his pupil’s ambitious schemes for conquest; so there occurred a friendly severance of relationship, Abraham going over to Hebron to establish his military capital.
 \vs p093 5:12 Abraham, because of his close connection with the illustrious Melchizedek, possessed great advantage over the surrounding petty kings; they all revered Melchizedek and unduly feared Abraham. Abraham knew of this fear and only awaited an opportune occasion to attack his neighbours, and this excuse came when some of these rulers presumed to raid the property of his nephew Lot, who dwelt in Sodom. Upon hearing of this, Abraham, at the head of his seven confederated tribes, moved on the enemy. His own bodyguard of 318 officered the army, numbering more than 4,000, which struck at this time.
-\vs p093 5:13 When Melchizedek heard of Abraham’s declaration of war, he went forth to dissuade him but only caught up with his former disciple as he returned victorious from the battle. Abraham insisted that the God of Salem had given him victory over his enemies and persisted in giving a tenth of his spoils to the Salem treasury. The other 90\%\ he removed to his capital at Hebron.
+\vs p093 5:13 When Melchizedek heard of Abraham’s declaration of war, he went forth to dissuade him but only caught up with his former disciple as he returned victorious from the battle. Abraham insisted that the God of Salem had given him victory over his enemies and persisted in giving a tenth of his spoils to the Salem treasury. The other 90\% he removed to his capital at Hebron.
 \vs p093 5:14 After this battle of Siddim, Abraham became leader of a second confederation of 11 tribes and not only paid tithes to Melchizedek but saw to it that all others in that vicinity did the same. His diplomatic dealings with the king of Sodom, together with the fear in which he was so generally held, resulted in the king of Sodom and others joining the Hebron military confederation; Abraham was really well on the way to establishing a powerful state in Palestine.
 \usection{6.\bibnobreakspace Melchizedek’s Covenant with Abraham}
 \vs p093 6:1 Abraham envisaged the conquest of all Canaan. His determination was only weakened by the fact that Melchizedek would not sanction the undertaking. But Abraham had about decided to embark upon the enterprise when the thought that he had no son to succeed him as ruler of this proposed kingdom began to worry him. He arranged another conference with Melchizedek; and it was in the course of this interview that the priest of Salem, the visible Son of God, persuaded Abraham to abandon his scheme of material conquest and temporal rule in favour of the spiritual concept of the kingdom of heaven.
