--- a/tex/p097.tex
+++ b/tex/p097.tex
@@ -79,7 +79,7 @@
 \vs p097 9:9 So many times did the priests, after preparing their fictitious narratives of God’s miraculous dealings with Israel, fail fully to delete the plain and matter\hyp{}of\hyp{}fact statements which already rested in the records.
 \vs p097 9:10 \pc David sought to build himself up politically by first marrying Saul’s daughter, then the widow of Nabal the rich Edomite, and then the daughter of Talmai, the king of Geshur. He took six wives from the women of Jebus, not to mention Bathsheba, the wife of the Hittite.
 \vs p097 9:11 And it was by such methods and out of such people that David built up the fiction of a divine kingdom of Judah as the successor of the heritage and traditions of the vanishing northern kingdom of Ephraimite Israel. David’s cosmopolitan tribe of Judah was more gentile than Jewish; nevertheless the oppressed elders of Ephraim came down and “anointed him king of Israel.” After a military threat, David then made a compact with the Jebusites and established his capital of the united kingdom at Jebus (Jerusalem), which was a strong\hyp{}walled city midway between Judah and Israel. The Philistines were aroused and soon attacked David. After a fierce battle they were defeated, and once more Yahweh was established as “The Lord God of Hosts.”
-\vs p097 9:12 But Yahweh must, perforce, share some of this glory with the Canaanite gods, for the bulk of David’s army was non\hyp{}Hebrew. And so there appears in your record (overlooked by the Judahite editors) this telltale statement: “Yahweh has broken my enemies before me. Therefore he called the name of the place Baal\hyp{}Perazim.” And they did this because 80\%\ of David’s soldiers were Baalites.
+\vs p097 9:12 But Yahweh must, perforce, share some of this glory with the Canaanite gods, for the bulk of David’s army was non\hyp{}Hebrew. And so there appears in your record (overlooked by the Judahite editors) this telltale statement: “Yahweh has broken my enemies before me. Therefore he called the name of the place Baal\hyp{}Perazim.” And they did this because 80\% of David’s soldiers were Baalites.
 \vs p097 9:13 David explained Saul’s defeat at Gilboa by pointing out that Saul had attacked a Canaanite city, Gibeon, whose people had a peace treaty with the Ephraimites. Because of this, Yahweh forsook him. Even in Saul’s time David had defended the Canaanite city of Keilah against the Philistines, and then he located his capital in a Canaanite city. In keeping with the policy of compromise with the Canaanites, David turned seven of Saul’s descendants over to the Gibeonites to be hanged.
 \vs p097 9:14 After the defeat of the Philistines, David gained possession of the “ark of Yahweh,” brought it to Jerusalem, and made the worship of Yahweh official for his kingdom. He next laid heavy tribute on the neighbouring tribes --- the Edomites, Moabites, Ammonites, and Syrians.
 \vs p097 9:15 David’s corrupt political machine began to get personal possession of land in the north in violation of the Hebrew mores and presently gained control of the caravan tariffs formerly collected by the Philistines. And then came a series of atrocities climaxed by the murder of Uriah. All judicial appeals were adjudicated at Jerusalem; no longer could “the elders” mete out justice. No wonder rebellion broke out. Today, Absalom might be called a demagogue; his mother was a Canaanite. There were a half dozen contenders for the throne besides the son of Bathsheba --- Solomon.
