--- a/tex/p014.tex
+++ b/tex/p014.tex
@@ -36,7 +36,7 @@
 \vs p014 3:2 There is no need of government among such perfect and near\hyp{}perfect intelligences. They stand in no need of regulation, for they are beings of native perfection interspersed with evolutionary creatures who have long since passed the scrutiny of the supreme tribunals of the superuniverses.
 \vs p014 3:3 The administration of Havona is not automatic, but it is marvellously perfect and divinely efficient. It is chiefly planetary and is vested in the resident Eternal of Days, each Havona sphere being directed by one of these Trinity\hyp{}origin personalities. Eternals of Days are not creators, but they are perfect administrators. They teach with supreme skill and direct their planetary children with a perfection of wisdom bordering on absoluteness.
 \vs p014 3:4 The billion spheres of the central universe constitute the training worlds of the high personalities native to Paradise and Havona and further serve as the final proving grounds for ascending creatures from the evolutionary worlds of time. In the execution of the Universal Father’s great plan of creature ascension the pilgrims of time are landed on the receiving worlds of the outer or seventh circuit, and subsequent to increased training and enlarged experience, they are progressively advanced inward, planet by planet and circle by circle, until they finally attain the Deities and achieve residence on Paradise.
-\vs p014 3:5 At present, although the spheres of the seven circuits are maintained in all their supernal glory, only about 1\%\ of all planetary capacity is utilized in the work of furthering the Father’s universal plan of mortal ascension. About 0.1\%\ of the area of these enormous worlds is dedicated to the life and activities of the Corps of the Finality, beings eternally settled in light and life who often sojourn and minister on the Havona worlds. These exalted beings have their personal residences on Paradise.
+\vs p014 3:5 At present, although the spheres of the seven circuits are maintained in all their supernal glory, only about 1\% of all planetary capacity is utilized in the work of furthering the Father’s universal plan of mortal ascension. About 0.1\% of the area of these enormous worlds is dedicated to the life and activities of the Corps of the Finality, beings eternally settled in light and life who often sojourn and minister on the Havona worlds. These exalted beings have their personal residences on Paradise.
 \vs p014 3:6 The planetary construction of the Havona spheres is entirely unlike that of the evolutionary worlds and systems of space. Nowhere else in all the grand universe is it convenient to utilize such enormous spheres as inhabited worlds. Triata physical constitution, coupled with the balancing effect of the immense dark gravity bodies, makes it possible so perfectly to equalize the physical forces and so exquisitely to balance the various attractions of this tremendous creation. Antigravity is also employed in the organization of the material functions and the spiritual activities of these enormous worlds.
 \vs p014 3:7 The architecture, lighting, and heating, as well as the biologic and artistic embellishment, of the Havona spheres, are quite beyond the greatest possible stretch of human imagination. You cannot be told much about Havona; to understand its beauty and grandeur you must see it. But there are real rivers and lakes on these perfect worlds.
 \vs p014 3:8 Spiritually these worlds are ideally appointed; they are fittingly adapted to their purpose of harbouring the numerous orders of differing beings who function in the central universe. Manifold activities take place on these beautiful worlds which are far beyond human comprehension.
