--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -25,18 +25,18 @@
 \vs p049 2:9 \pc The Satania system contains all of these types and numerous intermediate groups, although some are very sparingly represented.
 \vs p049 2:10 \ublistelem{1.}\bibnobreakspace \bibemph{The atmospheric types.} The physical differences of the worlds of mortal habitation are chiefly determined by the nature of the atmosphere; other influences which contribute to the planetary differentiation of life are relatively minor.
 \vs p049 2:11 The present atmospheric status of Urantia is almost ideal for the support of the breathing type of man, but the human type can be so modified that it can live on both the superatmospheric and the subatmospheric planets. Such modifications also extend to the animal life, which differs greatly on the various inhabited spheres. There is a very great modification of animal orders on both the sub\hyp{} and the superatmospheric worlds.
-\vs p049 2:12 Of the atmospheric types in Satania, about 2.5\%\ are subbreathers, about 5\%\ superbreathers, and over 91\%\ are mid\hyp{}breathers, altogether accounting for 98.5\%\ of the Satania worlds.
+\vs p049 2:12 Of the atmospheric types in Satania, about 2.5\% are subbreathers, about 5\% superbreathers, and over 91\% are mid\hyp{}breathers, altogether accounting for 98.5\% of the Satania worlds.
 \vs p049 2:13 Beings such as the Urantia races are classified as mid\hyp{}breathers; you represent the average or typical breathing order of mortal existence. If intelligent creatures should exist on a planet with an atmosphere similar to that of your near neighbour, Venus, they would belong to the superbreather group, while those inhabiting a planet with an atmosphere as thin as that of your outer neighbour, Mars, would be denominated subbreathers.
-\vs p049 2:14 If mortals should inhabit a planet devoid of air, like your moon, they would belong to the separate order of nonbreathers. This type represents a radical or extreme adjustment to the planetary environment and is separately considered. Nonbreathers account for the remaining 1.5\%\ of Satania worlds.
+\vs p049 2:14 If mortals should inhabit a planet devoid of air, like your moon, they would belong to the separate order of nonbreathers. This type represents a radical or extreme adjustment to the planetary environment and is separately considered. Nonbreathers account for the remaining 1.5\% of Satania worlds.
 \vs p049 2:15 \ublistelem{2.}\bibnobreakspace \bibemph{The elemental types.} These differentiations have to do with the relation of mortals to water, air, and land, and there are four distinct species of intelligent life as they are related to these habitats. The Urantia races are of the land order.
 \vs p049 2:16 It is quite impossible for you to envisage the environment which prevails during the early ages of some worlds. These unusual conditions make it necessary for the evolving animal life to remain in its marine nursery habitat for longer periods than on those planets which very early provide a hospitable land\hyp{}and\hyp{}atmosphere environment. Conversely, on some worlds of the superbreathers, when the planet is not too large, it is sometimes expedient to provide for a mortal type which can readily negotiate atmospheric passage. These air navigators sometimes intervene between the water and land groups, and they always live in a measure upon the ground, eventually evolving into land dwellers. But on some worlds, for ages they continue to fly even after they have become land\hyp{}type beings.
 \vs p049 2:17 It is both amazing and amusing to observe the early civilization of a primitive race of human beings taking shape, in one case, in the air and treetops and, in another, midst the shallow waters of sheltered tropic basins, as well as on the bottom, sides, and shores of these marine gardens of the dawn races of such extraordinary spheres. Even on Urantia there was a long age during which primitive man preserved himself and advanced his primitive civilization by living for the most part in the treetops as did his earlier arboreal ancestors. And on Urantia you still have a group of diminutive mammals (the bat family) that are air navigators, and your seals and whales, of marine habitat, are also of the mammalian order.
-\vs p049 2:18 In Satania, of the elemental types, 7\%\ are water, 10\%\ air, 70\%\ land, and 13\%\ combined land\hyp{}and\hyp{}air types. But these modifications of early intelligent creatures are neither human fishes nor human birds. They are of the human and prehuman types, neither superfishes nor glorified birds but distinctly mortal.
+\vs p049 2:18 In Satania, of the elemental types, 7\% are water, 10\% air, 70\% land, and 13\% combined land\hyp{}and\hyp{}air types. But these modifications of early intelligent creatures are neither human fishes nor human birds. They are of the human and prehuman types, neither superfishes nor glorified birds but distinctly mortal.
 \vs p049 2:19 \ublistelem{3.}\bibnobreakspace \bibemph{The gravity types.} By modification of creative design, intelligent beings are so constructed that they can freely function on spheres both smaller and larger than Urantia, thus being, in measure, accommodated to the gravity of those planets which are not of ideal size and density.
-\vs p049 2:20 The various planetary types of mortals vary in height, the average in Nebadon being a trifle under 2.1\,m. Some of the larger worlds are peopled with beings who are only about 76\,cm in height. Mortal stature ranges from here on up through the average heights on the average\hyp{}sized planets to around 3\,m on the smaller inhabited spheres. In Satania there is only one race under 1.2\,m in height. 20\%\ of the Satania inhabited worlds are peopled with mortals of the modified gravity types occupying the larger and the smaller planets.
-\vs p049 2:21 \ublistelem{4.}\bibnobreakspace \bibemph{The temperature types.} It is possible to create living beings who can withstand temperatures both much higher and much lower than the life range of the Urantia races. There are five distinct orders of beings as they are classified with reference to heat\hyp{}regulating mechanisms. In this scale the Urantia races are number three. 30\%\ of Satania worlds are peopled with races of modified temperature types. 12\%\ belong to the higher temperature ranges, 18\%\ to the lower, as compared with Urantians, who function in the mid\hyp{}temperature group.
+\vs p049 2:20 The various planetary types of mortals vary in height, the average in Nebadon being a trifle under 2.1\,m. Some of the larger worlds are peopled with beings who are only about 76\,cm in height. Mortal stature ranges from here on up through the average heights on the average\hyp{}sized planets to around 3\,m on the smaller inhabited spheres. In Satania there is only one race under 1.2\,m in height. 20\% of the Satania inhabited worlds are peopled with mortals of the modified gravity types occupying the larger and the smaller planets.
+\vs p049 2:21 \ublistelem{4.}\bibnobreakspace \bibemph{The temperature types.} It is possible to create living beings who can withstand temperatures both much higher and much lower than the life range of the Urantia races. There are five distinct orders of beings as they are classified with reference to heat\hyp{}regulating mechanisms. In this scale the Urantia races are number three. 30\% of Satania worlds are peopled with races of modified temperature types. 12\% belong to the higher temperature ranges, 18\% to the lower, as compared with Urantians, who function in the mid\hyp{}temperature group.
 \vs p049 2:22 \ublistelem{5.}\bibnobreakspace \bibemph{The electric types.} The electric, magnetic, and electronic behaviour of the worlds varies greatly. There are ten designs of mortal life variously fashioned to withstand the differential energy of the spheres. These ten varieties also react in slightly different ways to the chemical rays of ordinary sunlight. But these slight physical variations in no way affect the intellectual or the spiritual life.
-\vs p049 2:23 Of the electric groupings of mortal life, almost 23\%\ belong to class number 4, the Urantia type of existence. These types are distributed as follows: number 1, 1\%; number 2, 2\%; number 3, 5\%; number 4, 23\%; number 5, 27\%; number 6, 24\%; number 7, 8\%; number 8, 5\%; number 9, 3\%; number 10, 2\%\ --- in whole percentages.
+\vs p049 2:23 Of the electric groupings of mortal life, almost 23\% belong to class number 4, the Urantia type of existence. These types are distributed as follows: number 1, 1\%; number 2, 2\%; number 3, 5\%; number 4, 23\%; number 5, 27\%; number 6, 24\%; number 7, 8\%; number 8, 5\%; number 9, 3\%; number 10, 2\% --- in whole percentages.
 \vs p049 2:24 \ublistelem{6.}\bibnobreakspace \bibemph{The energizing types.} Not all worlds are alike in the manner of taking in energy. Not all inhabited worlds have an atmospheric ocean suited to respiratory exchange of gases, such as is present on Urantia. During the earlier and the later stages of many planets, beings of your present order could not exist; and when the respiratory factors of a planet are very high or very low, but when all other prerequisites to intelligent life are adequate, the Life Carriers often establish on such worlds a modified form of mortal existence, beings who are competent to effect their life\hyp{}process exchanges directly by means of light\hyp{}energy and the firsthand power transmutations of the Master Physical Controllers.
 \vs p049 2:25 There are six differing types of animal and mortal nutrition: The subbreathers employ the first type of nutrition, the marine dwellers the second, the mid\hyp{}breathers the third, as on Urantia. The superbreathers employ the fourth type of energy intake, while the nonbreathers utilize the fifth order of nutrition and energy. The sixth technique of energizing is limited to the midway creatures.
 \vs p049 2:26 \ublistelem{7.}\bibnobreakspace \bibemph{The unnamed types.} There are numerous additional physical variations in planetary life, but all of these differences are wholly matters of anatomical modification, physiologic differentiation, and electrochemical adjustment. Such distinctions do not concern the intellectual or the spiritual life.
@@ -77,7 +77,7 @@
 \vs p049 5:17 While the three\hyp{}brained peoples are capable of a slightly higher planetary evolution than either the one\hyp{} or two\hyp{}brained orders, all have the same type of life plasm and carry on planetary activities in very similar ways, much as do human beings on Urantia. These three types of mortals are distributed throughout the worlds of the local systems. In the majority of cases planetary conditions had very little to do with the decisions of the Life Carriers to project these varied orders of mortals on the different worlds; it is a prerogative of the Life Carriers thus to plan and execute.
 \vs p049 5:18 These three orders stand on an equal footing in the ascension career. Each must traverse the same intellectual scale of development, and each must master the same spiritual tests of progression. The system administration and the constellation overcontrol of these different worlds are uniformly free from discrimination; even the regimes of the Planetary Princes are identical.
 \vs p049 5:19 \ublistelem{3.}\bibnobreakspace \bibemph{Spirit\hyp{}reception series.} There are three groups of mind design as related to contact with spirit affairs. This classification does not refer to the one-, two-, and three\hyp{}brained orders of mortals; it refers primarily to gland chemistry, more particularly to the organization of certain glands comparable to the pituitary bodies. The races on some worlds have one gland, on others two, as do Urantians, while on still other spheres the races have three of these unique bodies. The inherent imagination and spiritual receptivity is definitely influenced by this differential chemical endowment.
-\vs p049 5:20 Of the spirit\hyp{}reception types, 65\%\ are of the second group, like the Urantia races. 12\%\ are of the first type, naturally less receptive, while 23\%\ are more spiritually inclined during terrestrial life. But such distinctions do not survive natural death; all of these racial differences pertain only to the life in the flesh.
+\vs p049 5:20 Of the spirit\hyp{}reception types, 65\% are of the second group, like the Urantia races. 12\% are of the first type, naturally less receptive, while 23\% are more spiritually inclined during terrestrial life. But such distinctions do not survive natural death; all of these racial differences pertain only to the life in the flesh.
 \vs p049 5:21 \ublistelem{4.}\bibnobreakspace \bibemph{Planetary\hyp{}mortal epochs.} This classification recognizes the succession of temporal dispensations as they affect man’s terrestrial status and his reception of celestial ministry.
 \vs p049 5:22 Life is initiated on the planets by the Life Carriers, who watch over its development until sometime after the evolutionary appearance of mortal man. Before the Life Carriers leave a planet, they duly install a Planetary Prince as ruler of the realm. With this ruler there arrives a full quota of subordinate auxiliaries and ministering helpers, and the first adjudication of the living and the dead is simultaneous with his arrival.
 \vs p049 5:23 With the emergence of human groupings, this Planetary Prince arrives to inaugurate human civilization and to focalize human society. Your world of confusion is no criterion of the early days of the reign of the Planetary Princes, for it was near the beginning of such an administration on Urantia that your Planetary Prince, Caligastia, cast his lot with the rebellion of the System Sovereign, Lucifer. Your planet has pursued a stormy course ever since.
@@ -88,7 +88,7 @@
 \vs p049 5:28 This classification of human beings will receive particular attention in a succeeding paper.
 \vs p049 5:29 \ublistelem{5.}\bibnobreakspace \bibemph{Creature\hyp{}kinship serials.} Planets are not only organized vertically into systems, constellations, and so on, but the universe administration also provides for horizontal groupings according to type, series, and other relationships. This lateral administration of the universe pertains more particularly to the co\hyp{}ordination of activities of a kindred nature which have been independently fostered on different spheres. These related classes of universe creatures are periodically inspected by certain composite corps of high personalities presided over by long\hyp{}experienced finaliters.
 \vs p049 5:30 These kinship factors are manifest on all levels, for kinship serials exist among nonhuman personalities as well as among mortal creatures --- even between human and superhuman orders. Intelligent beings are vertically related in 12 great groups of 7 major divisions each. The co\hyp{}ordination of these uniquely related groups of living beings is probably effected by some not fully comprehended technique of the Supreme Being.
-\vs p049 5:31 \ublistelem{6.}\bibnobreakspace \bibemph{Adjuster\hyp{}fusion series.} The spiritual classification or grouping of all mortals during their prefusion experience is wholly determined by the relation of the personality status to the indwelling Mystery Monitor. Almost 90\%\ of the inhabited worlds of Nebadon are peopled with Adjuster\hyp{}fusion mortals in contrast with a near\hyp{}by universe where scarcely more than one half of the worlds harbour beings who are Adjuster\hyp{}indwelt candidates for eternal fusion.
+\vs p049 5:31 \ublistelem{6.}\bibnobreakspace \bibemph{Adjuster\hyp{}fusion series.} The spiritual classification or grouping of all mortals during their prefusion experience is wholly determined by the relation of the personality status to the indwelling Mystery Monitor. Almost 90\% of the inhabited worlds of Nebadon are peopled with Adjuster\hyp{}fusion mortals in contrast with a near\hyp{}by universe where scarcely more than one half of the worlds harbour beings who are Adjuster\hyp{}indwelt candidates for eternal fusion.
 \vs p049 5:32 \ublistelem{7.}\bibnobreakspace \bibemph{Techniques of terrestrial escape.} There is fundamentally only one way in which individual human life can be initiated on the inhabited worlds, and that is through creature procreation and natural birth; but there are numerous techniques whereby man escapes his terrestrial status and gains access to the inward moving stream of Paradise ascenders.
 \usection{6.\bibnobreakspace Terrestrial Escape}
 \vs p049 6:1 All of the differing physical types and planetary series of mortals alike enjoy the ministry of Thought Adjusters, guardian angels, and the various orders of the messenger hosts of the Infinite Spirit. All alike are liberated from the bonds of flesh by the emancipation of natural death, and all alike go thence to the morontia worlds of spiritual evolution and mind progress.
