--- a/tex/p068.tex
+++ b/tex/p068.tex
@@ -61,7 +61,7 @@
 \vs p068 6:7 All down through the ages the standards of living have determined the quality of a surviving population in contrast with mere quantity. Local class standards of living give origin to new social castes, new mores. When standards of living become too complicated or too highly luxurious, they speedily become suicidal. Caste is the direct result of the high social pressure of keen competition produced by dense populations.
 \vs p068 6:8 The early races often resorted to practices designed to restrict population; all primitive tribes killed deformed and sickly children. Girl babies were frequently killed before the times of wife purchase. Children were sometimes strangled at birth, but the favourite method was exposure. The father of twins usually insisted that one be killed since multiple births were believed to be caused either by magic or by infidelity. As a rule, however, twins of the same sex were spared. While these taboos on twins were once well\hyp{}nigh universal, they were never a part of the Andonite mores; these peoples always regarded twins as omens of good luck.
 \vs p068 6:9 Many races learned the technique of abortion, and this practice became very common after the establishment of the taboo on childbirth among the unmarried. It was long the custom for a maiden to kill her offspring, but among more civilized groups these illegitimate children became the wards of the girl’s mother. Many primitive clans were virtually exterminated by the practice of both abortion and infanticide. But regardless of the dictates of the mores, very few children were ever destroyed after having once been suckled --- maternal affection is too strong.
-\vs p068 6:10 Even in the XX century there persist remnants of these primitive population controls. There is a tribe in Australia whose mothers refuse to rear more than two or three children. Not long since, one cannibalistic tribe ate every fifth child born. In Madagascar some tribes still destroy all children born on certain unlucky days, resulting in the death of about 25\%\ of all babies.
+\vs p068 6:10 Even in the XX century there persist remnants of these primitive population controls. There is a tribe in Australia whose mothers refuse to rear more than two or three children. Not long since, one cannibalistic tribe ate every fifth child born. In Madagascar some tribes still destroy all children born on certain unlucky days, resulting in the death of about 25\% of all babies.
 \vs p068 6:11 \pc From a world standpoint, overpopulation has never been a serious problem in the past, but if war is lessened and science increasingly controls human diseases, it may become a serious problem in the near future. At such a time the great test of the wisdom of world leadership will present itself. Will Urantia rulers have the insight and courage to foster the multiplication of the average or stabilized human being instead of the extremes of the supernormal and the enormously increasing groups of the subnormal? The normal man should be fostered; he is the backbone of civilization and the source of the mutant geniuses of the race. The subnormal man should be kept under society’s control; no more should be produced than are required to administer the lower levels of industry, those tasks requiring intelligence above the animal level but making such low\hyp{}grade demands as to prove veritable slavery and bondage for the higher types of mankind.
 \vsetoff
 \vs p068 6:12 [Presented by a Melchizedek sometime stationed on Urantia.]
