--- a/tex/p069.tex
+++ b/tex/p069.tex
@@ -47,7 +47,7 @@
 \vs p069 5:5 \ublistelem{2.}\bibnobreakspace \bibemph{Love of family ---} desire to provide for their wants. Capital represents the saving of property in spite of the pressure of the wants of today in order to insure against the demands of the future. A part of this future need may have to do with one’s posterity.
 \vs p069 5:6 \ublistelem{3.}\bibnobreakspace \bibemph{Vanity ---} longing to display one’s property accumulations. Extra clothing was one of the first badges of distinction. Collection vanity early appealed to the pride of man.
 \vs p069 5:7 \ublistelem{4.}\bibnobreakspace \bibemph{Position ---} eagerness to buy social and political prestige. There early sprang up a commercialized nobility, admission to which depended on the performance of some special service to royalty or was granted frankly for the payment of money.
-\vs p069 5:8 \ublistelem{5.}\bibnobreakspace \bibemph{Power ---} the craving to be master. Treasure lending was carried on as a means of enslavement, 100\%\ a year being the loan rate of these ancient times. The moneylenders made themselves kings by creating a standing army of debtors. Bond servants were among the earliest form of property to be accumulated, and in olden days debt slavery extended even to the control of the body after death.
+\vs p069 5:8 \ublistelem{5.}\bibnobreakspace \bibemph{Power ---} the craving to be master. Treasure lending was carried on as a means of enslavement, 100\% a year being the loan rate of these ancient times. The moneylenders made themselves kings by creating a standing army of debtors. Bond servants were among the earliest form of property to be accumulated, and in olden days debt slavery extended even to the control of the body after death.
 \vs p069 5:9 \ublistelem{6.}\bibnobreakspace \bibemph{Fear of the ghosts of the dead ---} priest fees for protection. Men early began to give death presents to the priests with a view to having their property used to facilitate their progress through the next life. The priesthoods thus became very rich; they were chief among ancient capitalists.
 \vs p069 5:10 \ublistelem{7.}\bibnobreakspace \bibemph{Sex urge ---} the desire to buy one or more wives. Man’s first form of trading was woman exchange; it long preceded horse trading. But never did the barter in sex slaves advance society; such traffic was and is a racial disgrace, for at one and the same time it hindered the development of family life and polluted the biologic fitness of superior peoples.
 \vs p069 5:11 \ublistelem{8.}\bibnobreakspace \bibemph{Numerous forms of self\hyp{}gratification.} Some sought wealth because it conferred power; others toiled for property because it meant ease. Early man (and some later\hyp{}day ones) tended to squander his resources on luxury. Intoxicants and drugs intrigued the primitive races.
