--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -25,7 +25,7 @@
 \vs p000 1:16 \pc DIVINITY is the characteristic, unifying, and co\hyp{}ordinating quality of Deity.
 \vs p000 1:17 Divinity is creature comprehensible as truth, beauty, and goodness; correlated in personality as love, mercy, and ministry; disclosed on impersonal levels as justice, power, and sovereignty.
 \vs p000 1:18 Divinity may be perfect --- complete --- as on existential and creator levels of Paradise perfection; it may be imperfect, as on experiential and creature levels of time\hyp{}space evolution; or it may be relative, neither perfect nor imperfect, as on certain Havona levels of existential\hyp{}experiential relationships.
-\vs p000 1:19 \pc When we attempt to conceive of perfection in all phases and forms of relativity, we encounter seven conceivable types\fnst{\textbf{seven conceivable types}, The following list of seven elements contains all non-empty subsets ($2^3 - 1 = 7$) of the set \{Absolute, Relative, Imperfection\}, listed in this particular order to reflect the inherent ordering of the three basic elements as follows: Absolute > Relative > Imperfection.}:
+\vs p000 1:19 \pc When we attempt to conceive of perfection in all phases and forms of relativity, we encounter seven conceivable types\fnst{\textbf{seven conceivable types}, The following list of seven elements contains all non-empty subsets ($2^3 - 1 = 7$) of the set (Absolute, Relative, Imperfection), listed in this particular order to reflect the inherent ordering of the three basic elements as follows: Absolute > Relative > Imperfection.}:
 \vs p000 1:20 \ublistelem{1.}\bibnobreakspace Absolute perfection in all aspects.
 \vs p000 1:21 \ublistelem{2.}\bibnobreakspace Absolute perfection in some phases and relative perfection in all other aspects.
 \vs p000 1:22 \ublistelem{3.}\bibnobreakspace Absolute, relative, and imperfect aspects in varied association.
